--- a/Impressum.css
+++ b/Impressum.css
@@ -1,13 +1,7 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 400px;
+  min-height: 404px;
 }
 
 .u-section-1 .u-text-1 {
-  margin-bottom: 0;
-}
-
-.u-section-1 .u-text-2 {
-  margin-left: 0;
-  margin-right: auto;
-  margin-bottom: 60px;
+  margin: 60px 0;
 }
