--- a/Startseite.css
+++ b/Startseite.css
@@ -91,335 +91,213 @@
   .u-section-1 .u-text-2 {
     width: 340px;
   }
-} .u-section-2 {
-  background-image: none;
-}
-
-.u-section-2 .u-sheet-1 {
-  min-height: 833px;
+}.u-section-2 .u-sheet-1 {
+  min-height: 690px;
 }
 
 .u-section-2 .u-text-1 {
-  font-size: 3.75rem;
-  margin: 60px auto 0;
+  --animation-custom_in-translate_x: -300px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  margin: 55px auto 0;
 }
 
 .u-section-2 .u-list-1 {
+  margin-top: 55px;
+  margin-bottom: 55px;
   grid-template-rows: auto;
-  margin-top: 64px;
-  margin-bottom: 60px;
 }
 
 .u-section-2 .u-repeater-1 {
-  grid-template-columns: calc(33.3333% - 16px) calc(33.3333% - 16px) calc(33.3333% - 16px);
-  min-height: 500px;
-  grid-gap: 24px 24px;
-}
-
-.u-section-2 .u-list-item-1 {
-  box-shadow: 5px 5px 30px 0 rgba(0,0,0,0.2);
-}
-
-.u-section-2 .u-container-layout-1 {
-  padding: 0 0 30px;
-}
-
-.u-section-2 .u-group-1 {
-  min-height: 92px;
-  margin-top: 0;
-  margin-bottom: 0;
-  height: auto;
-}
-
-.u-section-2 .u-container-layout-2 {
-  padding: 20px 30px;
-}
-
-.u-section-2 .u-text-2 {
-  font-size: 1.5rem;
-  margin: 0 auto;
+  grid-template-columns: calc(33.3333% - 20px) calc(33.3333% - 20px) calc(33.3333% - 20px);
+  min-height: 473px;
+  grid-gap: 30px 30px;
 }
 
 .u-section-2 .u-image-1 {
-  height: 278px;
-  margin-top: 0;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.25), rgba(0,0,0,0.25)), url("images/flo-sw-services-onlinecoaching.jpg");
+  background-position: 50% 50%;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 300px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+}
+
+.u-section-2 .u-container-layout-1 {
+  padding: 30px;
+}
+
+.u-section-2 .u-line-1 {
+  width: 276px;
+  transform-origin: left center;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 0.3;
+  margin: 0 auto 0 0;
+}
+
+.u-section-2 .u-text-2 {
+  margin-left: 0;
   margin-bottom: 0;
-  object-position: 100% 50%;
+  margin-top: 20px;
+  font-size: 1.5rem;
+  --animation-custom_in-scale: 0.3;
 }
 
 .u-section-2 .u-text-3 {
-  font-style: italic;
-  margin: 24px 30px 0;
-}
-
-.u-section-2 .u-btn-1 {
-  background-image: none;
-  text-transform: uppercase;
-  font-size: 0.875rem;
-  font-weight: 700;
-  margin: 20px auto 0;
-  padding: 0;
-}
-
-.u-section-2 .u-list-item-2 {
-  box-shadow: 5px 5px 30px 0 rgba(0,0,0,0.2);
-}
-
-.u-section-2 .u-container-layout-3 {
-  padding: 0 0 30px;
-}
-
-.u-section-2 .u-group-2 {
-  min-height: 92px;
-  margin-top: 0;
-  margin-bottom: 0;
-  height: auto;
-}
-
-.u-section-2 .u-container-layout-4 {
-  padding: 20px 30px;
-}
-
-.u-section-2 .u-text-4 {
-  font-weight: 700;
-  font-size: 1.5rem;
-  margin: 0 auto;
+  margin: 12px auto 0 0;
 }
 
 .u-section-2 .u-image-2 {
-  height: 278px;
-  margin-top: 0;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.25), rgba(0,0,0,0.25)), url("images/flo-sw-services-personaltraining.jpg");
+  background-position: 50% 50%;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 300px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+}
+
+.u-section-2 .u-container-layout-2 {
+  padding: 30px;
+}
+
+.u-section-2 .u-line-2 {
+  width: 276px;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 0.3;
+  margin: 0 auto 0 0;
+}
+
+.u-section-2 .u-text-4 {
+  margin-left: 0;
   margin-bottom: 0;
+  margin-top: 20px;
+  font-size: 1.5rem;
+  --animation-custom_in-scale: 0.3;
 }
 
 .u-section-2 .u-text-5 {
-  font-style: italic;
-  margin: 24px 30px 0;
-}
-
-.u-section-2 .u-btn-2 {
-  background-image: none;
-  text-transform: uppercase;
-  font-size: 0.875rem;
-  font-weight: 700;
-  margin: 20px auto 0;
-  padding: 0;
-}
-
-.u-section-2 .u-list-item-3 {
-  background-image: none;
-  box-shadow: 5px 5px 30px 0 rgba(0,0,0,0.2);
-}
-
-.u-section-2 .u-container-layout-5 {
-  padding: 0 0 30px;
-}
-
-.u-section-2 .u-group-3 {
-  min-height: 92px;
-  margin-top: 0;
-  margin-bottom: 0;
-  height: auto;
-}
-
-.u-section-2 .u-container-layout-6 {
-  padding: 20px 30px;
-}
-
-.u-section-2 .u-text-6 {
-  font-weight: 700;
-  font-size: 1.5rem;
-  margin: 0 auto;
+  margin: 12px auto 0 0;
 }
 
 .u-section-2 .u-image-3 {
-  height: 278px;
-  margin-top: 0;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.25), rgba(0,0,0,0.25)), url("images/flo-sw-services-posing.jpg");
+  background-position: 50% 50%;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 300px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+}
+
+.u-section-2 .u-container-layout-3 {
+  padding: 30px;
+}
+
+.u-section-2 .u-line-3 {
+  width: 276px;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 0.3;
+  margin: 0 auto 0 0;
+}
+
+.u-section-2 .u-text-6 {
+  margin-left: 0;
   margin-bottom: 0;
+  margin-top: 20px;
+  font-size: 1.5rem;
+  --animation-custom_in-scale: 0.3;
 }
 
 .u-section-2 .u-text-7 {
-  font-style: italic;
-  margin: 24px 30px 0;
-}
-
-.u-section-2 .u-btn-3 {
-  background-image: none;
-  text-transform: uppercase;
-  font-size: 0.875rem;
-  font-weight: 700;
-  margin: 20px auto 0;
-  padding: 0;
+  margin: 12px auto 0 0;
 }
 
 @media (max-width: 1199px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 757px;
+    min-height: 1102px;
   }
 
   .u-section-2 .u-repeater-1 {
-    grid-template-columns: repeat(3, calc(33.333333333333336% - 16px));
-    min-height: 408px;
-  }
-
-  .u-section-2 .u-group-1 {
-    height: auto;
-  }
-
-  .u-section-2 .u-image-1 {
-    height: 229px;
-  }
-
-  .u-section-2 .u-text-3 {
-    width: auto;
-    margin-left: 21px;
-    margin-right: 21px;
-  }
-
-  .u-section-2 .u-group-2 {
-    height: auto;
-  }
-
-  .u-section-2 .u-image-2 {
-    height: 229px;
-  }
-
-  .u-section-2 .u-text-5 {
-    width: auto;
-    margin-left: 21px;
-    margin-right: 21px;
-  }
-
-  .u-section-2 .u-group-3 {
-    height: auto;
-  }
-
-  .u-section-2 .u-image-3 {
-    height: 229px;
-  }
-
-  .u-section-2 .u-text-7 {
-    width: auto;
-    margin-left: 21px;
-    margin-right: 21px;
+    grid-template-columns: repeat(3, calc(33.3333% - 20px));
+    min-height: 385px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-2 .u-repeater-1 {
-    grid-template-columns: repeat(2, calc(50% - 12px));
-    min-height: 979px;
-  }
-
-  .u-section-2 .u-image-1 {
-    height: 263px;
-  }
-
-  .u-section-2 .u-text-3 {
-    margin-left: 25px;
-    margin-right: 25px;
-  }
-
-  .u-section-2 .u-image-2 {
-    height: 263px;
-  }
-
-  .u-section-2 .u-text-5 {
-    margin-left: 25px;
-    margin-right: 25px;
-  }
-
-  .u-section-2 .u-image-3 {
-    height: 263px;
-  }
-
-  .u-section-2 .u-text-7 {
-    margin-left: 25px;
-    margin-right: 25px;
+    grid-template-columns: repeat(2, calc(50% - 15px));
+    min-height: 936px;
   }
 }
 
 @media (max-width: 767px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 3984px;
+  }
+
   .u-section-2 .u-repeater-1 {
     grid-template-columns: 100%;
   }
 
-  .u-section-2 .u-container-layout-2 {
-    padding-left: 10px;
-    padding-right: 10px;
+  .u-section-2 .u-text-2 {
+    font-size: 2.25rem;
   }
 
-  .u-section-2 .u-image-1 {
-    height: 395px;
+  .u-section-2 .u-text-4 {
+    font-size: 2.25rem;
   }
 
-  .u-section-2 .u-text-3 {
-    margin-left: 30px;
-    margin-right: 30px;
-  }
-
-  .u-section-2 .u-container-layout-4 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-2 .u-image-2 {
-    height: 395px;
-  }
-
-  .u-section-2 .u-text-5 {
-    margin-left: 30px;
-    margin-right: 30px;
-  }
-
-  .u-section-2 .u-container-layout-6 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-2 .u-image-3 {
-    height: 395px;
-  }
-
-  .u-section-2 .u-text-7 {
-    margin-left: 30px;
-    margin-right: 30px;
+  .u-section-2 .u-text-6 {
+    font-size: 2.25rem;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-2 .u-text-1 {
+  .u-section-2 .u-sheet-1 {
+    min-height: 3403px;
+  }
+
+  .u-section-2 .u-container-layout-1 {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .u-section-2 .u-text-2 {
     font-size: 1.5rem;
   }
 
-  .u-section-2 .u-image-1 {
-    height: 249px;
+  .u-section-2 .u-container-layout-2 {
+    padding-left: 20px;
+    padding-right: 20px;
   }
 
-  .u-section-2 .u-text-3 {
-    margin-left: 25px;
-    margin-right: 25px;
+  .u-section-2 .u-text-4 {
+    font-size: 1.5rem;
   }
 
-  .u-section-2 .u-image-2 {
-    height: 249px;
+  .u-section-2 .u-container-layout-3 {
+    padding-left: 20px;
+    padding-right: 20px;
   }
 
-  .u-section-2 .u-text-5 {
-    margin-left: 25px;
-    margin-right: 25px;
-  }
-
-  .u-section-2 .u-image-3 {
-    height: 249px;
-  }
-
-  .u-section-2 .u-text-7 {
-    margin-left: 25px;
-    margin-right: 25px;
+  .u-section-2 .u-text-6 {
+    font-size: 1.5rem;
   }
 } .u-section-3 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("images/rsz__mg_0097.jpg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("images/flo-landing-insta-bg.jpg");
   background-position: 50% 50%;
 }
 
@@ -535,5 +413,141 @@
     font-size: 1.25rem;
     margin-left: 0;
     margin-right: 0;
+  }
+} .u-section-4 {
+  background-image: none;
+}
+
+.u-section-4 .u-sheet-1 {
+  min-height: 736px;
+}
+
+.u-section-4 .u-group-1 {
+  width: 827px;
+  min-height: 594px;
+  background-image: none;
+  --animation-custom_in-scale: 1;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 300px;
+  margin: 60px auto;
+}
+
+.u-section-4 .u-container-layout-1 {
+  padding: 30px;
+}
+
+.u-section-4 .u-text-1 {
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 0.3;
+  margin: 0;
+}
+
+.u-section-4 .u-form-1 {
+  height: 430px;
+  width: 703px;
+  margin: 15px auto 0;
+}
+
+.u-section-4 .u-input-1 {
+  font-size: 1.25rem;
+}
+
+.u-section-4 .u-input-2 {
+  font-size: 1.25rem;
+}
+
+.u-section-4 .u-form-group-3 {
+  margin-left: 0;
+}
+
+.u-section-4 .u-input-3 {
+  font-size: 1.25rem;
+}
+
+.u-section-4 .u-form-group-4 {
+  margin-left: 0;
+}
+
+.u-section-4 .u-input-4 {
+  font-size: 1.25rem;
+}
+
+.u-section-4 .u-form-group-5 {
+  margin-left: 0;
+}
+
+.u-section-4 .u-input-5 {
+  font-size: 1.25rem;
+}
+
+.u-section-4 .u-btn-1 {
+  background-image: none;
+  border-style: none;
+  font-size: 1.125rem;
+  width: 100%;
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: 1px;
+  padding: 16px 0 18px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 631px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 483px;
+  }
+
+  .u-section-4 .u-group-1 {
+    width: 720px;
+  }
+
+  .u-section-4 .u-form-1 {
+    width: 660px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 362px;
+  }
+
+  .u-section-4 .u-group-1 {
+    width: 540px;
+  }
+
+  .u-section-4 .u-container-layout-1 {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .u-section-4 .u-form-1 {
+    height: 433px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 228px;
+  }
+
+  .u-section-4 .u-group-1 {
+    width: 340px;
+    min-height: 707px;
+  }
+
+  .u-section-4 .u-container-layout-1 {
+    padding-left: 25px;
+    padding-right: 25px;
   }
 }
